--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="menubar">
                 <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT US</a></li>
-                <li><a href="#skills">SERVICES</a></li>
+                <li><a href="#section">SERVICES</a></li>
                 <li><a href="#contact">CONTACT</a></li>
                 <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
             </ul> 
